--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,7 +1,5 @@
 {
   "hooks": {
-    "pre-commit": "pretty-quick --staged",
-    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-    "pre-push": "npm run test"
+    "pre-commit": "pretty-quick --staged"
   }
 }
