--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,5 @@
 {
-  "bracketSpacing": false,
-  "jsxBracketSameLine": false,
   "printWidth": 80,
-  "singleQuote": true
+  "singleQuote": true,
+  "bracketSpacing": false
 }
