--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@contactlab/design-tokens",
   "version": "5.1.0",
-  "description": "Contactlab Design Tokens - Named entities that store visual design attributes.",
-  "license": "MIT",
+  "description": "Named entities that store visual design info, in order to maintain a scalable, consistent system for UI development.",
   "author": {
     "name": "Contactlab UXD Team",
     "email": "uxd@contactlab.com",
@@ -11,50 +10,55 @@
   "contributors": [
     "Giovanni Tramutola <giovanni.tramutola@contactlab.com>"
   ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/contactlab/design-tokens"
   },
   "engines": {
-    "node": ">= 8.0",
-    "npm": ">= 6.0"
+    "node": ">=8.0",
+    "npm": ">=5.0"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/bundle.css",
   "files": [
     "dist",
     "*.md",
     "LICENSE"
   ],
-  "keywords": [
-    "contactlab",
-    "design-tokens",
-    "design-system"
-  ],
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "lint:src": "tslint -p .",
-    "check": "tsc --noEmit",
-    "test": "npm run check && npm run lint:src",
-    "prebuild": "shx rm -r dist || true",
-    "build": "tsc",
-    "prerelease": "npm run build",
-    "release": "standard-version",
-    "postrelease": "git push --follow-tags origin master && npm publish"
+    "lint:js": "eslint . --ignore-path .gitignore",
+    "clean": "shx rm -r dist || true",
+    "dist": "postcss src/**/*.pcss --base src --dir dist",
+    "build": "npm-run-all clean dist",
+    "prerelease": "npm-run-all lint:* build",
+    "release": "np"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.3.1",
-    "@commitlint/config-conventional": "7.3.1",
-    "@contactlab/tslint-config": "1.2.0",
+    "autoprefixer": "9.4.10",
+    "cssnano": "4.1.10",
+    "eslint": "5.15.1",
+    "eslint-config-contactlab": "2.0.2",
+    "eslint-config-prettier": "4.1.0",
     "husky": "1.3.1",
-    "prettier": "1.15.3",
-    "pretty-quick": "1.8.0",
+    "jest": "24.3.1",
+    "np": "4.0.2",
+    "npm-run-all": "4.1.5",
+    "postcss-cli": "6.1.2",
+    "postcss-import": "12.0.1",
+    "postcss-nesting": "7.0.0",
+    "prettier": "1.16.4",
+    "pretty-quick": "1.10.0",
     "shx": "0.3.2",
-    "standard-version": "4.4.0",
-    "tslint": "5.12.1",
-    "tslint-config-prettier": "1.17.0",
-    "typescript": "3.2.2"
-  }
+    "stylelint": "9.10.1",
+    "stylelint-config-pack": "2.0.0"
+  },
+  "keywords": [
+    "contactlab",
+    "design-tokens",
+    "design-patterns",
+    "ui-theme"
+  ]
 }
