--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "lint:js": "eslint . --ignore-path .gitignore",
     "clean": "shx rm -r dist || true",
-    "dist": "postcss src/**/*.pcss --base src --dir dist",
+    "dist": "postcss \"src/**/*.pcss\" --base \"src\" --dir \"dist\" --ext \".css\"",
     "build": "npm-run-all clean dist",
     "prerelease": "npm-run-all lint:* build",
     "release": "np"
@@ -43,7 +43,6 @@
     "eslint-config-contactlab": "2.0.2",
     "eslint-config-prettier": "4.1.0",
     "husky": "1.3.1",
-    "jest": "24.3.1",
     "np": "4.0.2",
     "npm-run-all": "4.1.5",
     "postcss-cli": "6.1.2",
