update vscode and postcss settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,20 @@
 {
+  "prettier.bracketSpacing": false,
+  "prettier.singleQuote": true,
   "eslint.enable": true,
+  "eslint.validate": ["javascript", "html"],
   "files.associations": {
     "*.pcss": "postcss"
   },
-  "[javascript]": {
+  "[css]": {
     "editor.formatOnSave": true
   },
-  "[css]": {
+  "[javascript]": {
     "editor.formatOnSave": true
   },
   "[markdown]": {
     "editor.wordWrap": "wordWrapColumn",
     "editor.quickSuggestions": true,
     "editor.formatOnSave": true
-  }
+  },
 }
