--- a/package.json
+++ b/package.json
@@ -31,23 +31,20 @@
   "scripts": {
     "lint:js": "eslint . --ignore-path .gitignore",
     "clean": "shx rm -r dist || true",
-    "dist": "postcss \"src/**/*.pcss\" --base \"src\" --dir \"dist\" --ext \".css\"",
-    "build": "npm-run-all clean dist",
-    "prerelease": "npm-run-all lint:* build",
+    "build": "postcss \"src/**/*.pcss\" --base \"src\" --dir \"dist\" --ext \".css\"",
+    "prerelease": "npm run lint:js && npm run build",
     "release": "np"
   },
   "devDependencies": {
-    "autoprefixer": "9.4.10",
+    "autoprefixer": "9.5.0",
     "cssnano": "4.1.10",
-    "eslint": "5.15.1",
+    "eslint": "5.15.3",
     "eslint-config-contactlab": "2.0.2",
     "eslint-config-prettier": "4.1.0",
     "husky": "1.3.1",
     "np": "4.0.2",
-    "npm-run-all": "4.1.5",
     "postcss-cli": "6.1.2",
     "postcss-import": "12.0.1",
-    "postcss-nesting": "7.0.0",
     "prettier": "1.16.4",
     "pretty-quick": "1.10.0",
     "shx": "0.3.2",
@@ -59,5 +56,8 @@
     "design-tokens",
     "design-patterns",
     "ui-theme"
-  ]
+  ],
+  "dependencies": {
+    "postcss-nested": "4.1.2"
+  }
 }
