--- a/package.json
+++ b/package.json
@@ -29,35 +29,30 @@
     "access": "public"
   },
   "scripts": {
-    "lint:js": "eslint . --ignore-path .gitignore",
+    "lint:css": "stylelint ./src/**/*.pcss",
     "clean": "shx rm -r dist || true",
     "build": "postcss \"src/**/*.pcss\" --base \"src\" --dir \"dist\" --ext \".css\"",
-    "prerelease": "npm run lint:js && npm run build",
+    "prerelease": "npm run lint:css && npm run build",
     "release": "np"
   },
   "devDependencies": {
     "autoprefixer": "9.5.0",
     "cssnano": "4.1.10",
-    "eslint": "5.15.3",
-    "eslint-config-contactlab": "2.0.2",
-    "eslint-config-prettier": "4.1.0",
     "husky": "1.3.1",
     "np": "4.0.2",
     "postcss-cli": "6.1.2",
     "postcss-import": "12.0.1",
+    "postcss-nested": "4.1.2",
     "prettier": "1.16.4",
     "pretty-quick": "1.10.0",
     "shx": "0.3.2",
-    "stylelint": "9.10.1",
-    "stylelint-config-pack": "2.0.0"
+    "stylelint-config-pack": "2.0.0",
+    "stylelint": "9.10.1"
   },
   "keywords": [
     "contactlab",
     "design-tokens",
     "design-patterns",
     "ui-theme"
-  ],
-  "dependencies": {
-    "postcss-nested": "4.1.2"
-  }
+  ]
 }
