--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
   "prettier.bracketSpacing": false,
   "prettier.singleQuote": true,
-  "files.associations": {
-    "*.pcss": "postcss"
-  },
   "[css]": {
     "editor.formatOnSave": true
   },
-  "[postcss]": {
+  "[scss]": {
+    "editor.formatOnSave": true
+  },
+  "[less]": {
+    "editor.formatOnSave": true
+  },
+  "[javascript]": {
     "editor.formatOnSave": true
   },
   "[markdown]": {
