--- a/package.json
+++ b/package.json
@@ -38,16 +38,17 @@
   "devDependencies": {
     "cssnano": "4.1.10",
     "cssnano-preset-advanced": "4.0.7",
-    "husky": "1.3.1",
-    "np": "4.0.2",
+    "husky": "2.2.0",
+    "np": "5.0.1",
     "npm-run-all": "4.1.5",
     "postcss-cli": "6.1.2",
+    "postcss-custom-media": "7.0.8",
     "postcss-nested": "4.1.2",
-    "prettier": "1.17.0",
+    "prettier": "1.17.1",
     "pretty-quick": "1.10.0",
     "stylelint": "10.0.1",
-    "stylelint-config-pack": "2.0.0",
-    "svgo": "1.2.1"
+    "stylelint-config-pack": "3.1.0",
+    "svgo": "1.2.2"
   },
   "keywords": [
     "contactlab",
