--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "scripts": {
     "lint:css": "stylelint src/css/**/*.{css,less,scss}",
     "minify:css": "postcss src/css/**/*.{css,less,scss} --base=src --dir=dist",
-    "minify:svg": "svgo src/illustrations/*.svg --output=dist/illustrations --disable=inlineStyles",
-    "build": "run-p -cln minify:css minify:svg",
+    "minify:svg": "svgo --folder=src/illustrations --output=dist/illustrations --disable=inlineStyles",
+    "build": "npm run minify:css && npm run minify:svg",
     "prerelease": "npm run lint:css && npm run build",
     "release": "np"
   },
@@ -40,7 +40,6 @@
     "cssnano-preset-advanced": "4.0.7",
     "husky": "2.2.0",
     "np": "5.0.1",
-    "npm-run-all": "4.1.5",
     "postcss-cli": "6.1.2",
     "postcss-custom-media": "7.0.8",
     "postcss-nested": "4.1.2",
