create playground for design-tokens (#11)

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,8 @@
 {
+  "bracketSpacing": false,
   "printWidth": 80,
+  "semi": true,
   "singleQuote": true,
-  "bracketSpacing": false
+  "trailingComma": "none",
+  "useTabs": false
 }
