--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "files": [
     "lib",
-    "*.md",
+    "./*.md",
     "LICENSE"
   ],
   "scripts": {
@@ -43,6 +43,7 @@
     "@storybook/addon-notes": "5.1.8",
     "@storybook/html": "5.1.8",
     "babel-loader": "8.0.6",
+    "github-markdown-css": "3.0.1",
     "husky": "2.4.1",
     "np": "5.0.3",
     "npm-run-all": "4.1.5",
@@ -51,7 +52,6 @@
     "pretty-quick": "1.11.1",
     "pug": "2.0.3",
     "pug-html-loader": "1.1.5",
-    "storybook-readme": "5.0.3",
     "stylelint-config-pack": "4.1.2",
     "svgo": "1.2.2"
   },
