--- a/package.json
+++ b/package.json
@@ -29,14 +29,23 @@
     "LICENSE"
   ],
   "scripts": {
-    "prettify": "prettier --write \"**/*.{html,pcss,less,scss}\" --ignore-path .gitignore",
-    "lint:css": "stylelint ./**/*.{pcss,less,scss}",
+    "prettify": "prettier --write \"**/*.{html,pcss,less}\" --ignore-path .gitignore",
+    "lint:css": "stylelint ./**/*.{pcss,less}",
+    "lint:js": "xo",
     "test": "run-s lint:*",
     "build:css": "postcss ./lib/styles/{colors,resets,typography}/*.pcss --base ./lib/styles --dir ./lib/styles --ext css",
     "build:svg": "svgo --folder ./lib/illustrations/ --output ./lib/illustrations/min/ --disable inlineStyles",
     "build": "run-p -cln build:*",
     "start": "start-storybook --static-dir ./lib,./playground/assets --port 9001",
     "release": "run-s -cln test build np"
+  },
+  "xo": {
+    "space": true,
+    "prettier": true,
+    "env": [
+      "jest",
+      "node"
+    ]
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
@@ -53,7 +62,8 @@
     "pug": "2.0.4",
     "pug-html-loader": "1.1.5",
     "stylelint-config-pack": "4.1.2",
-    "svgo": "1.2.2"
+    "svgo": "1.2.2",
+    "xo": "0.24.0"
   },
   "keywords": [
     "contactlab",
